[project.urls]
homepage = 'https://github.com/WGBH-MLA/chowda'
documentation = 'https://WGBH-MLA.github.io/chowda/'
repository = 'https://github.com/WGBH-MLA/chowda'

[project]
name = 'chowda'
dynamic = ['version']
description = 'A CLAMS processing application'
authors = [{ name = 'WGBH-MLA', email = 'ryan_harbert@wgbh.org' }]
requires-python = '>=3.8.1,<4.0'
readme = 'README.md'
license = { text = 'MIT' }
dependencies = [
    "fastapi~=0.110",
    "starlette-admin~=0.13",
    "sqlmodel~=0.0",
    "pydantic[email]~=2.6",
    "sonyci~=0.2",
    "psycopg2~=2.9",
    "metaflow~=2.11",
    "alembic~=1.13",
    "python-dotenv~=1.0",
    "authlib~=1.3",
    "itsdangerous~=2.1",
    "httpx~=0.27",
    "rich~=13.7",
    "pyjwt~=2.8",
    "fastapi-cache2>=0.2.1",
]

[project.optional-dependencies]
production = [
    "uvicorn[standard]~=0.29",
    "gunicorn~=21.2",
]
test = [
    "factory-boy~=3.3",
    "pytest~=8.1",
    "pytest-cov~=5.0",
    "pytest-sugar~=1.0",
    "pytest-xdist~=3.5",
    "httpx~=0.27",
    "nbmake~=1.5",
    "vcrpy~=6.0",
    "pytest-vcr~=1.0",
    "urllib3~=1.26",
    "pytest-mock~=3.14",
    "pytest-asyncio~=0.23",
    "trio~=0.25",
]
locust = [
    "locust~=2.24",
    "pydantic-factories~=1.17",
]

[tool.black]
extend-exclude = 'migrations'

[tool.coverage.run]
omit = ['tests/*']

[tool.pytest.ini_options]
testpaths = ['tests', 'docs']

[tool.ruff]
extend-exclude = ['migrations']

[tool.ruff.lint]
ignore = ['Q000']
select = [
    'B', # flake8-bugbear
    'C4', # flake8-comprehensions
    'C90', # mccabe
    'E', # pycodestyle errors
    'ERA', # eradicate
    'F', # pyflakes
    'I', # isort
    'INT', # flake8-gettext
    'N', # pep8-naming
    'PIE', # flake8-pie,
    'PLC', # pylint - convention
    'PLE', # pylint - error
    'PLW', # pylint - warning
    'Q', # flake8-quotes
    'RET', # flake8-return,
    'RUF', # Ruff-specific rules
    'SIM', # flake8-simplify
    'UP', # pyupgrade
    'W', # pycodestyle warnings
]

[tool.pdm]
version = { source = 'file', path = 'chowda/_version.py' }

[tool.pdm.build]
includes = []

[tool.pdm.dev-dependencies]
dev = [
    "uvicorn~=0.29",
    "black~=24.3",
    "ruff~=0.3",
    "pre-commit~=3.5",
]
docs = [
    "mkdocs~=1.5",
    "mkdocs-material~=9.5",
    "mkdocs-git-revision-date-localized-plugin~=1.2",
    "mike~=2.0",
    "mkdocstrings[python]~=0.24",
    "mkdocs-jupyter~=0.24",
]

[tool.setuptools.packages.find]
include = ['chowda', 'tests']
