[build-system]
requires = ['pdm-backend']
build-backend = 'pdm.backend'

[project]
name = 'chowda'
dynamic = ['version']
description = 'A CLAMS processing application'
authors = [{ name = 'WGBH-MLA', email = 'ryan_harbert@wgbh.org' }]
dependencies = [
    "fastapi~=0.111",
    "starlette-admin~=0.14",
    "sqlmodel~=0.0",
    "pydantic[email]~=2.7",
    "sonyci~=0.2",
    "psycopg2~=2.9",
    "metaflow~=2.12",
    "alembic~=1.13",
    "python-dotenv~=1.0",
    "authlib~=1.3",
    "itsdangerous~=2.2",
    "httpx~=0.27",
    "rich~=13.7",
    "pyjwt~=2.8",
]
requires-python = '>=3.8.1,<4.0'
readme = 'README.md'
license = { text = 'MIT' }

[project.urls]
homepage = 'https://github.com/WGBH-MLA/chowda'
documentation = 'https://WGBH-MLA.github.io/chowda/'
repository = 'https://github.com/WGBH-MLA/chowda'

[project.optional-dependencies]
production = [
    "uvicorn[standard]~=0.30",
    "gunicorn~=22.0",
]
test = [
    "factory-boy~=3.3",
    "pytest~=8.2",
    "pytest-cov~=5.0",
    "pytest-sugar~=1.0",
    "pytest-xdist~=3.6",
    "httpx~=0.27",
    "nbmake~=1.5",
    "vcrpy~=6.0",
    "pytest-vcr~=1.0",
    "urllib3~=1.26",
    "pytest-mock~=3.14",
    "pytest-asyncio~=0.23",
    "trio~=0.25",
]
locust = [
    "locust~=2.25",
    "pydantic-factories~=1.17",
]
development = [
    "kubernetes~=30.1",
]

[tool.black]
extend-exclude = 'migrations'

[tool.coverage.run]
omit = ['tests/*']

[tool.pytest.ini_options]
testpaths = ['tests', 'docs']

[tool.ruff]
extend-exclude = ['migrations']

[tool.ruff.format]
quote-style = 'single'

[tool.lint]
ignore = ['Q000']
select = [
    'B', # flake8-bugbear
    'C4', # flake8-comprehensions
    'C90', # mccabe
    'E', # pycodestyle errors
    'ERA', # eradicate
    'F', # pyflakes
    # 'I', # isort
    'INT', # flake8-gettext
    'N', # pep8-naming
    'PIE', # flake8-pie,
    'PLC', # pylint - convention
    'PLE', # pylint - error
    'PLW', # pylint - warning
    'Q', # flake8-quotes
    'RET', # flake8-return,
    'RUF', # Ruff-specific rules
    'SIM', # flake8-simplify
    'UP', # pyupgrade
    'W', # pycodestyle warnings

]

[tool.pdm]
version = { source = 'file', path = 'chowda/_version.py' }

[tool.pdm.build]
includes = []

[tool.pdm.dev-dependencies]
dev = [
    "uvicorn~=0.30",
    "black~=24.4",
    "ruff~=0.4",
    "pre-commit~=3.5",
]
docs = [
    "mkdocs~=1.6",
    "mkdocs-material~=9.5",
    "mkdocs-git-revision-date-localized-plugin~=1.2",
    "mike~=2.1",
    "mkdocstrings[python]~=0.25",
    "mkdocs-jupyter~=0.24",
]
