[project.urls]
homepage = 'https://github.com/WGBH-MLA/chowda'
documentation = 'https://WGBH-MLA.github.io/chowda/'
repository = 'https://github.com/WGBH-MLA/chowda'

[project]
name = 'chowda'
dynamic = ['version']
description = 'A CLAMS processing application'
authors = [{ name = 'WGBH-MLA', email = 'ryan_harbert@wgbh.org' }]
requires-python = '>=3.8.1,<4.0'
readme = 'README.md'
license = { text = 'MIT' }
dependencies = [
    "fastapi~=0.115",
    "starlette-admin~=0.14",
    "sqlmodel~=0.0",
    "pydantic[email]~=2.9",
    "sonyci~=0.3",
    "psycopg2~=2.9",
    "metaflow~=2.12",
    "alembic~=1.13",
    "python-dotenv~=1.0",
    "authlib~=1.3",
    "itsdangerous~=2.2",
    "httpx~=0.27",
    "fastapi-cache2~=0.2",
    "rich~=13.9",
    "pyjwt~=2.9",
]

[project.optional-dependencies]
production = [
    "uvicorn[standard]<0.31",
    "gunicorn~=23.0",
]
test = [
    "factory-boy~=3.3",
    "pytest~=8.3",
    "pytest-cov~=5.0",
    "pytest-sugar~=1.0",
    "pytest-xdist~=3.6",
    "httpx~=0.27",
    "nbmake~=1.5",
    "vcrpy~=6.0",
    "pytest-vcr~=1.0",
    "urllib3~=1.26",
    "pytest-mock~=3.14",
    "pytest-asyncio~=0.24",
    "trio~=0.26",
]
locust = [
    "locust~=2.25",
    "pydantic-factories~=1.17",
]
development = ["kubernetes~=31.0"]

[tool.black]
extend-exclude = 'migrations'

[tool.coverage.run]
omit = ['tests/*']

[tool.pytest.ini_options]
testpaths = ['tests', 'docs']

[tool.ruff]
extend-exclude = ['migrations', 'docs']

[tool.ruff.format]
quote-style = 'single'

[tool.lint]
ignore = ['Q000']
select = [
    'B',   # flake8-bugbear
    'C4',  # flake8-comprehensions
    'C90', # mccabe
    'E',   # pycodestyle errors
    'ERA', # eradicate
    'F',   # pyflakes
    # 'I', # isort
    'INT', # flake8-gettext
    'N',   # pep8-naming
    'PIE', # flake8-pie,
    'PLC', # pylint - convention
    'PLE', # pylint - error
    'PLW', # pylint - warning
    'Q',   # flake8-quotes
    'RET', # flake8-return,
    'RUF', # Ruff-specific rules
    'SIM', # flake8-simplify
    'UP',  # pyupgrade
    'W',   # pycodestyle warnings

]

[tool.pdm]
version = { source = 'file', path = 'chowda/_version.py' }

[tool.pdm.build]
includes = []

[tool.pdm.dev-dependencies]
dev = [
    "uvicorn<0.31",
    "black~=24.8",
    "ruff~=0.6",
    "pre-commit~=3.5",
]
docs = [
    "mkdocs~=1.6",
    "mkdocs-material~=9.5",
    "mkdocs-git-revision-date-localized-plugin~=1.2",
    "mike~=2.1",
    "mkdocstrings[python]~=0.26",
    "mkdocs-jupyter~=0.24",
]

[tool.pdm.scripts]
dev = 'uvicorn chowda.app:app --reload'
docs = 'mkdocs serve'
format = 'black -S .'
lint = 'ruff .'
migrate = 'alembic upgrade head'
test = 'pytest'

[tool.setuptools.packages.find]
include = ['chowda', 'tests']
